--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta property="og:title" content="JJOOLL 링크 모음" />
-        <meta property="og:description" content="프로그래머 되는 길" />
+        <meta property="og:description" content="프로그래머 되는 Link" />
         <meta property="og:image" content="ryan.jpg" />
         <title>르탄이 - 프로필 링크</title>
         <style>
