--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a target="_blank" href="https://spartacodingclub.kr/">스파르타코딩클럽</a>
             <a target="_blank" href="https://jjooll.tistory.com/manage/posts/">JH 티스토리</a>
             <a target="_blank" href="http://www-legacy.sdu.ac.kr/login/login.asp?MENU_ID=1690&CONTENTS_NO=1">SDU</a>
-            <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">띵동코딩</a>
+            <a target="_blank" href="https://www.notion.so/_-e707930504184f9aab9530b5c735505f">JH Notion</a>
         </div>
 
         
